# csf-planner

./: .gitignore  README.md
src/control/px4ctrl/config/: ctrl_param_fpv.yaml
src/detection/csf/: CMakeLists.txt  package.xml
src/detection/csf/config/: Cloth.yaml
src/detection/csf/include/: CSF.h
src/detection/csf/launch/: csf_node.launch  visual.rviz
src/detection/csf/msg/: Cloth.msg  Trajectory.msg  Waypoints.msg
src/detection/csf/src/: CSF.cpp  csf_node.cpp  test.cpp
src/detection/pointcloud_detection/: CMakeLists.txt
src/detection/pointcloud_detection/config/: Cloth_Para.yaml
src/detection/pointcloud_detection/src/: Test.cpp  Testv1.cpp
src/location/odom_fusion/: CMakeLists.txt  package.xml
src/location/odom_fusion/include/odom_fusion/: odom_fusion.h
src/location/odom_fusion/launch/: odom_fusion.launch
src/location/odom_fusion/src/: odom_fusion.cpp
src/planner/Minimumsnap/config/: minimumsnap_Para.yaml
src/planner/Minimumsnap/include/: Minimumsnap.hpp
src/planner/Minimumsnap/src/: Minimumsnap.cpp
src/planner/Utils/csf_utils/pc_map/: CMakeLists.txt  package.xml
src/planner/Utils/csf_utils/pc_map/src/: combine_pcd.cpp  point_cloud_mapper.cpp  point_cloud_mapper_fromDepth.cpp  vis_demo.cpp
src/planner/Utils/csf_utils/traj_record/: CMakeLists.txt  package.xml
src/planner/Utils/csf_utils/traj_record/src/: record.cpp
src/planner/Utils/utils/uav_utils/include/uav_utils/: converters.h
src/planner/console/: CMakeLists.txt  package.xml
src/planner/console/config/: 8.yaml
src/planner/console/include/console/: console_CSF.hpp
src/planner/console/launch/: fly.launch  replay.launch  rviz_replay.launch  visual.rviz  visual_replay.rviz
src/planner/console/src/: console_8.cpp  console_CSF.cpp  console_node_CSF.cpp
src/script/: headerCheck.py  imgCheck.py  traj_trans.py
